[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/HUD/Minimap_Colors.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 8 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = -110.0
margin_right = 130.0
margin_bottom = -16.0001

[node name="StartButton" type="TouchScreenButton" parent="VBoxContainer"]
normal = ExtResource( 2 )
shape = SubResource( 1 )

[node name="InstructionsButton" type="TouchScreenButton" parent="VBoxContainer"]

[node name="LeaderboardButton" type="TouchScreenButton" parent="VBoxContainer"]

[node name="QuitButton" type="TouchScreenButton" parent="VBoxContainer"]

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/InstructionsButton" to="." method="_on_InstructionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LeaderboardButton" to="." method="_on_LeaderboardButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
